Overflow fix

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -68,7 +68,13 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
     line-height: 1;
+    overflow-x: hidden;
 }
+
+body .row {
+    margin: 0;
+}
+
 ol, ul {
     list-style: none;
 }
@@ -791,7 +797,9 @@ nav .linkedin {
     }
 
     #sectionThree .sectionThreeBubble {
-        left:300px;
+        position: absolute;
+        left: auto;
+        right: 30px;
     }
 
 }
